CustomObjects/objects/blng__PaymentRun__c.object
<CustomObject>
    <fields>
        <fullName>blng__CompletedTime__c</fullName>
        <description>Invoice run completed  time</description>
        <label>Completed Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>blng__FailedTransactions__c</fullName>
        <label>Failed Transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__InvoicesProcessed__c</fullName>
        <label>Invoices Processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__PaymentScheduler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Scheduler</label>
        <referenceTo>blng__PaymentScheduler__c</referenceTo>
        <relationshipLabel>Payment Runs</relationshipLabel>
        <relationshipName>PaymentSchedulerPaymentRuns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__StartTime__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>blng__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__PaymentRunStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__SuccessfulTransactions__c</fullName>
        <label>Successful Transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__TotalPaymentProcessed__c</fullName>
        <label>Total Payment Processed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__TransactionsGenerated__c</fullName>
        <formula>blng__FailedTransactions__c +  blng__SuccessfulTransactions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transactions Generated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Payment Run</label>
    <nameField>
        <label>Payment Run Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>